# py-jen-ghaction

./: README.md  diff_manual.csv  diff_pandas.csv  file1.csv  file2.csv  main.py  num.py  pipeline.groovy  pyproject.toml  test_batch_jobs.py  test_main.py
.github/workflows/: gh-actions-wf.yaml
