[project]
name = "py-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cowsay>=6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "py-lib",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.uv.sources]
py-lib = { path = "../py-lib/dist/py_lib-0.1.0-py3-none-any.whl" }
